<resources>
    <string name="app_name">Tasker Android</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="filler_img">https://tasker.aravindweb.in/images/tasker_login_img1.jpeg</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginHint">Login</string>
    <string name="logoutHint">Logout</string>
    <string name="registerHint">Register</string>
    <string name="welcomeMessage">Welcome to the Tasker</string>
    <string name="redirectRegister">Don\'t have an account?</string>
    <string name="redirectLogin">Have an account?</string>
    <string name="signUpMessage">Sign Up - Tasker</string>
    <string name="nameHint">Name</string>
    <string name="phoneHint">Phone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Tasker</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="courseSection">Course Name</string>
    <string name="courseCode">Course Code</string>
    <string name="default_web_client_id">Course Code</string>
    <string name="tokenLocation">in.aravindweb.tasker.prefs</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number">Phone number</string>
    <string name="update">Update</string>
    <string name="delete_account">Delete Account</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="add">Add</string>
    <string name="make_announcement">Make Announcement</string>
    <string name="delete">Delete</string>
</resources>